src/objects/Field_Trip__Field_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Field_Trip__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Object_Analysis__c</fullName>
        <label>Object Analysis</label>
        <referenceTo>Field_Trip__Object_Analysis__c</referenceTo>
        <relationshipLabel>Field Analyses</relationshipLabel>
        <relationshipName>Field_Analyses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Populated_On_Percent__c</fullName>
        <formula>VALUE(
IF(Field_Trip__Object_Analysis__r.Field_Trip__Records__c = 0, &quot;&quot;, TEXT(Field_Trip__Populated_On__c /  Field_Trip__Object_Analysis__r.Field_Trip__Records__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Populated_On__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Total_Tally__c</fullName>
        <label>Total Tally (Temporary)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>anytype</fullName><default>false</default><label>anytype</label></value>
                <value><fullName>base64</fullName><default>false</default><label>base64</label></value>
                <value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value>
                <value><fullName>Combobox</fullName><default>false</default><label>Combobox</label></value>
                <value><fullName>Currency</fullName><default>false</default><label>Currency</label></value>
                <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
                <value><fullName>DateTime</fullName><default>false</default><label>DateTime</label></value>
                <value><fullName>Double</fullName><default>false</default><label>Double</label></value>
                <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
                <value><fullName>ID</fullName><default>false</default><label>ID</label></value>
                <value><fullName>Integer</fullName><default>false</default><label>Integer</label></value>
                <value><fullName>MultiPicklist</fullName><default>false</default><label>MultiPicklist</label></value>
                <value><fullName>Percent</fullName><default>false</default><label>Percent</label></value>
                <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
                <value><fullName>Picklist</fullName><default>false</default><label>Picklist</label></value>
                <value><fullName>Reference</fullName><default>false</default><label>Reference</label></value>
                <value><fullName>String</fullName><default>false</default><label>String</label></value>
                <value><fullName>TextArea</fullName><default>false</default><label>TextArea</label></value>
                <value><fullName>URL</fullName><default>false</default><label>URL</label></value>
                <value><fullName>Address</fullName><default>false</default><label>Address</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Trip__isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Trip__isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Field Analysis</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>